# HRGuideAI

./: package-lock.json  pyproject.toml
Forms/: Annual_Leave_Request.xlsx
backend/: agent.py  config.py  main.py  seed_data.py  vercel.json
backend/api/: conversations.py  load_user_data.py  messages.py  routes.py
backend/database/: db_connection.py  models_postgres.py
backend/tools/: Form.py  Promotion_Calculator.py  Promotion_Table.py
backend/utils/: form_convertor.py  form_schemas.py  load_data.py  message_persistence.py  promotion_table.py  promt.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: chat-interface.tsx  conversations-sidebar.tsx  login.tsx  providers.tsx
frontend/hooks/: useConversations.ts  useMessagePersistence.ts
frontend/lib/: api.ts  auth-context.tsx  theme-context.tsx
