[project]
name = "bachelor-project"
version = "0.1.0"
description = ""
authors = [
    {name = "amr.saleh@i-hq.tech"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "docarray (>=0.41.0,<0.42.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "copilotkit (>=0.1.65,<0.2.0)",
    "databases[postgresql] (>=0.9.0,<0.10.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "reportlab (>=4.4.5,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
